# easy-rider

./: README.md
easy-rider-backend/: .gitignore  Makefile  README.md  pylintrc  pyproject.toml
easy-rider-backend/config/: urls.py
easy-rider-backend/config/settings/: base.py  local.py
easy-rider-backend/project/api/: admin.py  apps.py  filters.py  models.py  policies.py  serializers.py  urls.py  views.py
easy-rider-backend/project/api/migrations/: 0001_initial.py
easy-rider-backend/project/api/tests/: test_views.py
easy-rider-frontend/: README.md  nuxt.config.js  package-lock.json  package.json
easy-rider-frontend/components/: Alert.vue  BaseComponentMixin.js  Breadcrumb.vue  Layout.vue  Logo.vue  NavigationBar.vue  Table.vue
easy-rider-frontend/components/trips/: TripCommentInput.vue  TripDateInput.vue  TripDestinationInput.vue  TripEditForm.vue  TripEndDateInput.vue  TripFilterForm.vue  TripForm.vue  TripStartDateInput.vue  TripTable.vue  ValidatableTripDateInput.vue  ValidatableTripDestinationInput.vue  ValidatableTripEndDateInput.vue  ValidatableTripStartDateInput.vue
easy-rider-frontend/components/users/: BaseUserForm.vue  UserEditForm.vue  UserEmailInput.vue  UserFilterForm.vue  (+8 more)
easy-rider-frontend/layouts/: default.vue  error.vue  simple.vue
easy-rider-frontend/middleware/: privileged.js
easy-rider-frontend/models/: Roles.js  Trip.js  User.js
easy-rider-frontend/pages/: index.vue
easy-rider-frontend/plugins/: VeeValidate.js  axios.js
easy-rider-frontend/store/: account.js  trips.js  users.js
easy-rider-frontend/utils/: date.js
(+11 files in other folders)
